    generated by R perl script
  - bug fix: R 1.8.0/win32 does not detach packages when quit
    it is safe now to call rgl_quit and lib_quit multiple times
    win32lib.cpp: added dllmain that calls rgl_quit on process exit    
  - added core support for devcpp IDE

v0.64-7
  - added mouse capturing
  - rgl.sprites 'radius' bug fixed
  - memory leak bugfix: texture objects are now AutoDestroy and used through Ref's
  - resource management improvment: pixmaps gets free'd when they become unused
    e.g. texture objects are created.
  - no limitations on pixmap sizes
  - mipmap support
  - support for different texture minification and magnification filters

v0.64-8
  - build bugfix : removed rgl/src/Makefile
  - updated configure to check and setup LDFLAGS for OpenGLU library

v0.64-9
  - MacOS X 'Panther' G5 fix for OpenGL library loading in .first.lib
  - removed lpng and zlib from source tree 
  - support for automatic downloading of zlib and lpng on win32 
  - added demo directory with several examples using demo(rgl)

v0.64-10
  - updated .C() calls using PACKAGE="rgl"
  - updated Maintainer.mk using correct zlib version
  - improved dynamic unload using library.dynam.unload()
  - conditional macos x darwin code in .First.lib()

v0.64-11
  - removed several redundant semicolons, required by gcc 3.4 ansi-pedantic mode.
  - win32: uses R's zlib and libpng sources
  - win32: added virtual destructor in Win32GUIFactory (removes warning)
 
v0.64-12
  - cran bugfix: permissions of cleanup fixed.

v0.64-13
  - DESCRIPTION fix: moved R 1.41 -> R 1.4.1 dependency

v0.64-14
  Merging changes from murdoch-branch:  
  - text justification from 0 to 1
  - linestrips
  - djmrgl style functions:  points3d, etc.
  - fixed rgl.bringtotop, added stay option
  - added 4x4 matrix functions from djmrgl
  - added rgl.user2window and rgl.window2user functions
  - added selection functions
  - added trackball navigation functions
  - added user-selectable mouse handlers  